# fastapi-bookstore

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2021-12-22_23:19:31_initial_commit.py  2021-12-27_16:49:49_initial_db_structure.py  2021-12-28_15:16:12_db_structure_update.py
app/: main.py  runserver.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: book.py  books.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_book.py  errors.py
app/db/: base.py  base_class.py  session.py  session_async.py
app/models/: __init__.py  book.py
app/schemas/: __init__.py  book.py
tests/: conftest.py  test_books.py
