[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
SQLAlchemy = {extras = ["asyncio", "mypy"], version = "^1.4.26"}
uvicorn = "^0.15.0"
alembic = "^1.7.4"
wsproto = "^1.0.0"
asyncpg = "^0.24.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
black = "^21.8b0"
flake8 = "^3.9.2"
mypy = "^0.910"
pre-commit-hooks = {git = "https://github.com/pre-commit/pre-commit-hooks"}
pytest = "^6.2.5"
psycopg2-binary = "^2.9.1"
httpx = "^0.21.1"
pytest-asyncio = "^0.16.0"

[tool.poetry.scripts]
server = "app.runserver:run_uvicorn_server"
migrate = "app.create_tables_and_data:migrate"
create_test_data = "app.create_tables_and_data:create_test_data"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
